--- a/test/better-spring-boot-test/build.gradle
+++ b/test/better-spring-boot-test/build.gradle
@@ -6,5 +6,6 @@ version 'io.better'
 
 dependencies {
 
+    compile project(':better-jwt-spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
 }
