--- a/better-message-callback-spring-boot-starter/build.gradle
+++ b/better-message-callback-spring-boot-starter/build.gradle
@@ -5,5 +5,6 @@ plugins {
 version 'io.better'
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-amqp')
+    compile('org.springframework:spring-context')
+    compile('org.springframework.boot:spring-boot-autoconfigure')
 }
