--- a/test/better-spring-boot-test/build.gradle
+++ b/test/better-spring-boot-test/build.gradle
@@ -7,5 +7,6 @@ version 'io.better'
 dependencies {
 
     compile project(':better-jwt-spring-boot-starter')
+    compile project(':better-message-callback-spring-boot-starter')
     compile('org.springframework.boot:spring-boot-starter-web')
 }
