--- a/core/better-http-client-core/build.gradle
+++ b/core/better-http-client-core/build.gradle
@@ -5,5 +5,5 @@ plugins {
 version 'io.better'
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.springframework:spring-context'
 }
